# forestair-ir-rs

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  partitions.csv  setup.sh
.cargo/: config.toml
src/: ac_server.rs  ir_protocol.rs  ir_tx.rs  main.rs
src/web/: app.js  index.html  manifest.json  style.css
