[package]
name = "forestair-ir-rs"
version = "0.1.0"
authors = ["Dwarf1er"]
edition = "2024"
resolver = "2"
rust-version = "1.85"

[[bin]]
name = "forestair-ir-rs"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
esp-idf-hal = { version = "0.45.2", features = ["rmt-legacy"] }
esp-wifi-provisioning = "0.1.0"

[build-dependencies]
embuild = "0.33"
minify-html = "0.18.1"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.8.2" }
